fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,8 @@
 }
 
 .side-poster {
-  width: 64%;
-  margin: 1em;
+  width: 70%;
+  margin: 0.5em;
   border-radius: 30px;
   box-shadow: 0px 0px 8px 5px rgba(184,182,184,1);
 }
@@ -121,13 +121,13 @@
   height: 100%;
   border-radius: 30px;
   box-shadow: 0px 10px 8px 5px rgba(199,199,199,1);
-  margin-top: 27em;
+  margin-top: 30em;
   margin-left: 3em;
 }
 
 .add-button {
-  margin-top: -27em;
-  margin-bottom: 1em;
+  margin-top: -30em;
+  margin-bottom: 0.5em;
 }
 
 .errorMessage {
